FIX #15 - add z-index and position to divider styles to correct improper display in Safari / iOS

--- a/public/assets/css/scss/core/_presentation.scss
+++ b/public/assets/css/scss/core/_presentation.scss
@@ -88,7 +88,9 @@ body {
 		font-size: 14px;
 		height: 26px;
 		line-height: 26px;
+		position: relative;
 		width: 26px;
+		z-index: 5;
 	}
 	&:before {
 		border-top: 1px solid $color-border;
